Fix systemd cpu/memory problems on RedHat.
https://github.com/kontena/pharos-cluster/issues/440

--- a/roles/k8s_node/templates/systemd_units/kubelet.service.j2
+++ b/roles/k8s_node/templates/systemd_units/kubelet.service.j2
@@ -5,6 +5,10 @@ After=docker.service
 Requires=docker.service
 
 [Service]
+{% if ansible_os_family == 'RedHat' %}
+CPUAccounting=true
+MemoryAccounting=true
+{% endif %}
 User=root
 Group=root
 ExecStart=/usr/bin/kubelet \
