--- a/roles/k8s_master/templates/systemd_units/cloud-controller-manager.service.j2
+++ b/roles/k8s_master/templates/systemd_units/cloud-controller-manager.service.j2
@@ -12,7 +12,7 @@ After=network.target
 [Service]
 User=kubernetes
 Group=kubernetes
-ExecStart=/usr/bin/cloud-controller-manager \
+ExecStart={{ k8s__k8s_bin_dir }}/cloud-controller-manager \
   --allocate-node-cidrs={{ k8s_master__cloud_controller_manager_allocate_node_cidrs }} \
   --bind-address={{ k8s_master__cloud_controller_manager_bind_address }} \
   --cloud-config={{ k8s_master__k8s_configs_dir }}/cloud.conf \
