--- a/roles/k8s_master/templates/systemd_units/kube-scheduler.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-scheduler.service.j2
@@ -6,7 +6,7 @@ After=network.target
 [Service]
 User=kubernetes
 Group=kubernetes
-ExecStart=/usr/bin/kube-scheduler \
+ExecStart={{ k8s__k8s_bin_dir }}/kube-scheduler \
   --config={{ k8s_master__k8s_configs_dir }}/kube-scheduler.conf \
   --v={{ k8s_master__kube_scheduler_vlog_level }}
 Restart=always
