--- a/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
+++ b/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
@@ -82,6 +82,7 @@ podPidsLimit: {{ k8s_node__kubelet_pod_pids_limit }}
 port: {{ k8s__kubelet_port }}
 readOnlyPort: 0
 rotateCertificates: {{ k8s_node__kubelet_rotate_certificates }}
+runtimeRequestTimeout: {{ k8s_node__kubelet_runtime_request_timeout }}
 {% if k8s__static_pod.enabled %}
 staticPodPath: {{ k8s__static_pod.manifests_path }}
 {% endif %}
