--- a/roles/k8s_node/templates/systemd_units/kubelet.service.j2
+++ b/roles/k8s_node/templates/systemd_units/kubelet.service.j2
@@ -1,8 +1,8 @@
 [Unit]
 Description=Kubernetes Kubelet
 Documentation=https://github.com/kubernetes/kubernetes
-After=docker.service
-Requires=docker.service
+After=containerd.service
+Requires=containerd.service
 
 [Service]
 {% if ansible_os_family == 'RedHat' %}
@@ -27,7 +27,9 @@ ExecStart={{ k8s__k8s_bin_dir }}/kubelet \
   --network-plugin=cni \
   --pod-infra-container-image={{ k8s_node__kubelet_pod_infra_container_image }} \
   --v={{ k8s_node__kubelet_vlog_level }} \
-  --volume-plugin-dir={{ k8s__volume_plugin_dir }}
+  --volume-plugin-dir={{ k8s__volume_plugin_dir }} \
+  --container-runtime=remote \
+  --container-runtime-endpoint=unix:///run/containerd/containerd.sock
 Restart=always
 RestartSec={{ k8s_node__kubelet_restart_sec }}s
 KillMode=process
