--- a/roles/k8s_node/templates/containerd.config.toml.j2
+++ b/roles/k8s_node/templates/containerd.config.toml.j2
@@ -1,10 +1,10 @@
-root = "/var/lib/containerd"
-state = "/run/containerd"
+root = "/var/lib/k8s-containerd"
+state = "/run/k8s-containerd"
 subreaper = true
 oom_score = -999
 
 [grpc]
-  address = "/run/containerd/containerd.sock"
+  address = "/run/k8s-containerd/containerd.sock"
   uid = 0
   gid = 0
   max_recv_message_size = 16777216
@@ -48,11 +48,11 @@ oom_score = -999
           BinaryName = "{{ k8s_node__runc_bin_dir }}/runc"
           Root = ""
           CriuPath = ""
-          {% if k8s_node__kubelet_cgroup_driver == 'cgroupfs' %}
+{% if k8s_node__kubelet_cgroup_driver == 'cgroupfs' %}
           SystemdCgroup = false
-          {% else %}
+{% else %}
           SystemdCgroup = true
-          {% endif %}
+{% endif %}
       [plugins.cri.containerd.runtimes.runc]
         runtime_type = "io.containerd.runc.v1"
         pod_annotations = []
@@ -65,11 +65,11 @@ oom_score = -999
           BinaryName = "{{ k8s_node__runc_bin_dir }}/runc"
           Root = ""
           CriuPath = ""
-          {% if k8s_node__kubelet_cgroup_driver == 'cgroupfs' %}
+{% if k8s_node__kubelet_cgroup_driver == 'cgroupfs' %}
           SystemdCgroup = false
-          {% else %}
+{% else %}
           SystemdCgroup = true
-          {% endif %}
+{% endif %}
     [plugins.cri.cni]
       bin_dir = "{{ k8s_node__kubelet_cni_bin_dir }}"
       conf_dir = "{{ k8s_node__kubelet_cni_conf_dir }}"
@@ -91,7 +91,7 @@ oom_score = -999
     no_shim = false
     shim_debug = false
   [plugins.opt]
-    path = "/opt/containerd"
+    path = "/opt/k8s-containerd"
   [plugins.restart]
     interval = "10s"
   [plugins.scheduler]
