--- a/roles/k8s_node/templates/systemd_units/kubelet.service.j2
+++ b/roles/k8s_node/templates/systemd_units/kubelet.service.j2
@@ -29,7 +29,7 @@ ExecStart={{ k8s__k8s_bin_dir }}/kubelet \
   --v={{ k8s_node__kubelet_vlog_level }} \
   --volume-plugin-dir={{ k8s__volume_plugin_dir }} \
   --container-runtime=remote \
-  --container-runtime-endpoint=unix:///run/k8s-containerd/containerd.sock
+  --container-runtime-endpoint=unix://{{ k8s_node__containerd_state_dir }}/containerd.sock
 Restart=always
 RestartSec={{ k8s_node__kubelet_restart_sec }}s
 KillMode=process
