--- a/roles/k8s_node/templates/containerd.config.toml.j2
+++ b/roles/k8s_node/templates/containerd.config.toml.j2
@@ -34,6 +34,7 @@ oom_score = -999
     stats_collect_period = 10
     enable_tls_streaming = false
     max_container_log_line_size = 16384
+    disable_proc_mount = false
     [plugins.cri.containerd]
       snapshotter = "overlayfs"
       default_runtime_name = "runc"
