--- a/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
+++ b/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
@@ -79,7 +79,7 @@ maxOpenFiles: {{ k8s_node__kubelet_max_open_files }}
 maxPods: {{ k8s_node__kubelet_max_pods }}
 nodeStatusUpdateFrequency: {{ k8s_node__kubelet_node_status_update_frequency }}
 podPidsLimit: {{ k8s_node__kubelet_pod_pids_limit }}
-port: {{ k8s__kubelet_port }}
+port: {{ k8s_node__kubelet_port }}
 readOnlyPort: 0
 rotateCertificates: {{ k8s_node__kubelet_rotate_certificates }}
 runtimeRequestTimeout: {{ k8s_node__kubelet_runtime_request_timeout }}
