--- a/roles/weave_net/templates/weave_daemonset.yml.j2
+++ b/roles/weave_net/templates/weave_daemonset.yml.j2
@@ -177,6 +177,8 @@ items:
         tolerations:
         - effect: NoSchedule
           operator: Exists
+        - effect: NoExecute
+          operator: Exists
         volumes:
         - name: weavedb
           hostPath:
