--- a/roles/k8s_node/templates/containerd.config.toml.j2
+++ b/roles/k8s_node/templates/containerd.config.toml.j2
@@ -1,14 +1,25 @@
+version = 2
 root = "{{ k8s_node__containerd_root_dir }}"
 state = "{{ k8s_node__containerd_state_dir }}"
-subreaper = true
+plugin_dir = ""
+disabled_plugins = []
+required_plugins = []
 oom_score = -999
 
 [grpc]
   address = "{{ k8s_node__containerd_state_dir }}/containerd.sock"
+  tcp_address = ""
+  tcp_tls_cert = ""
+  tcp_tls_key = ""
   uid = 0
   gid = 0
   max_recv_message_size = 16777216
   max_send_message_size = 16777216
+
+[ttrpc]
+  address = ""
+  uid = 0
+  gid = 0
 
 [debug]
   address = ""
@@ -23,41 +34,37 @@ oom_score = -999
 [cgroup]
   path = ""
 
+[timeouts]
+  "io.containerd.timeout.shim.cleanup" = "5s"
+  "io.containerd.timeout.shim.load" = "5s"
+  "io.containerd.timeout.shim.shutdown" = "3s"
+  "io.containerd.timeout.task.state" = "2s"
+
 [plugins]
-  [plugins.cgroups]
-    no_prometheus = false
-  [plugins.cri]
+  [plugins."io.containerd.grpc.v1.cri"]
+    disable_tcp_service = {{ k8s_node__containerd_disable_tcp_service }}
     stream_server_address = "127.0.0.1"
     stream_server_port = "0"
+    stream_idle_timeout = "4h"
     enable_selinux = false
     sandbox_image = "{{ k8s_node__kubelet_pod_infra_container_image }}"
     stats_collect_period = 10
     enable_tls_streaming = false
     max_container_log_line_size = 16384
+    disable_cgroup = false
+    disable_apparmor = false
+    restrict_oom_score_adj = false
+    max_concurrent_downloads = 3
     disable_proc_mount = false
-    [plugins.cri.containerd]
+    [plugins."io.containerd.grpc.v1.cri".containerd]
       snapshotter = "overlayfs"
+      no_pivot = false
       default_runtime_name = "runc"
-      [plugins.cri.containerd.default_runtime]
-        runtime_type = "io.containerd.runc.v1"
-        [plugins.cri.containerd.default_runtime.options]
-          NoPivotRoot = false
-          NoNewKeyring = false
-          ShimCgroup = ""
-          IoUid = 0
-          IoGid = 0
-          BinaryName = "{{ k8s_node__runc_bin_dir }}/runc"
-          Root = ""
-          CriuPath = ""
-{% if k8s_node__kubelet_cgroup_driver == 'cgroupfs' %}
-          SystemdCgroup = false
-{% else %}
-          SystemdCgroup = true
-{% endif %}
-      [plugins.cri.containerd.runtimes.runc]
-        runtime_type = "io.containerd.runc.v1"
+      [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
+        runtime_type = "io.containerd.runc.v2"
         pod_annotations = []
-        [plugins.cri.containerd.runtimes.runc.options]
+        privileged_without_host_devices = false
+        [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc.options]
           NoPivotRoot = false
           NoNewKeyring = false
           ShimCgroup = ""
@@ -71,31 +78,41 @@ oom_score = -999
 {% else %}
           SystemdCgroup = true
 {% endif %}
-    [plugins.cri.cni]
+    [plugins."io.containerd.grpc.v1.cri".cni]
       bin_dir = "{{ k8s_node__kubelet_cni_bin_dir }}"
       conf_dir = "{{ k8s_node__kubelet_cni_conf_dir }}"
       max_conf_num = 1
       conf_template = ""
-    [plugins.cri.registry]
-      [plugins.cri.registry.mirrors]
-        [plugins.cri.registry.mirrors."docker.io"]
+    [plugins."io.containerd.grpc.v1.cri".registry]
+      [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
+        [plugins."io.containerd.grpc.v1.cri".registry.mirrors."docker.io"]
           endpoint = ["https://registry-1.docker.io"]
-    [plugins.cri.x509_key_pair_streaming]
+    [plugins."io.containerd.grpc.v1.cri".x509_key_pair_streaming]
       tls_cert_file = ""
       tls_key_file = ""
-  [plugins.diff-service]
+  [plugins."io.containerd.runtime.v2.task"]
+    platforms = ["linux/amd64"]
+  [plugins."io.containerd.service.v1.diff-service"]
     default = ["walking"]
-  [plugins.linux]
-    shim = "{{ k8s_node__containerd_bin_dir }}/containerd-shim-runc-v1"
+  [plugins."io.containerd.snapshotter.v1.devmapper"]
+    root_path = ""
+    pool_name = ""
+    base_image_size = ""
+  [plugins."io.containerd.runtime.v1.linux"]
+    shim = "{{ k8s_node__containerd_bin_dir }}/containerd-shim-runc-v2"
     runtime = "{{ k8s_node__runc_bin_dir }}/runc"
     runtime_root = ""
     no_shim = false
     shim_debug = false
-  [plugins.opt]
+  [plugins."io.containerd.internal.v1.opt"]
     path = "{{ k8s_node__containerd_opt_dir }}"
-  [plugins.restart]
+  [plugins."io.containerd.internal.v1.restart"]
     interval = "10s"
-  [plugins.scheduler]
+  [plugins."io.containerd.metadata.v1.bolt"]
+    content_sharing_policy = "shared"
+  [plugins."io.containerd.monitor.v1.cgroups"]
+    no_prometheus = false
+  [plugins."io.containerd.gc.v1.scheduler"]
     pause_threshold = 0.02
     deletion_threshold = 0
     mutation_threshold = 100
