Add a parameter to change log level of containerd.

--- a/roles/k8s_node/templates/systemd_units/containerd.service.j2
+++ b/roles/k8s_node/templates/systemd_units/containerd.service.j2
@@ -9,7 +9,7 @@ Group=root
 Environment=PATH={{ k8s_node__containerd_bin_dir }}:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 ExecStart={{ k8s_node__containerd_bin_dir }}/containerd \
   -c {{ k8s_node__containerd_conf }} \
-  -l info
+  -l {{ k8s_node__containerd_log_level }}
 Restart=always
 RestartSec={{ k8s_node__containerd_restart_sec }}
 KillMode=process
