--- a/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
+++ b/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
@@ -95,3 +95,4 @@ tlsCipherSuites:
 {% endfor %}
 tlsMinVersion: {{ k8s_node__kubelet_tls_min_version }}
 tlsPrivateKeyFile: {{ k8s_node__pki_dir }}/kubelet.key
+volumePluginDir: {{ k8s__volume_plugin_dir }}
