--- a/roles/k8s_node/templates/containerd.config.toml.j2
+++ b/roles/k8s_node/templates/containerd.config.toml.j2
@@ -41,14 +41,22 @@ oom_score = -999
   "io.containerd.timeout.task.state" = "2s"
 
 [plugins]
+  [plugins."io.containerd.gc.v1.scheduler"]
+    pause_threshold = 0.02
+    deletion_threshold = 0
+    mutation_threshold = 100
+    schedule_delay = "0s"
+    startup_delay = "100ms"
   [plugins."io.containerd.grpc.v1.cri"]
     disable_tcp_service = {{ k8s_node__containerd_disable_tcp_service }}
     stream_server_address = "127.0.0.1"
     stream_server_port = "0"
-    stream_idle_timeout = "4h"
+    stream_idle_timeout = "4h0m0s"
     enable_selinux = false
+    selinux_category_range = 1024
     sandbox_image = "{{ k8s_node__kubelet_pod_infra_container_image }}"
     stats_collect_period = 10
+    systemd_cgroup = false
     enable_tls_streaming = false
     max_container_log_line_size = 16384
     disable_cgroup = false
@@ -56,27 +64,39 @@ oom_score = -999
     restrict_oom_score_adj = false
     max_concurrent_downloads = 3
     disable_proc_mount = false
+    unset_seccomp_profile = ""
+    tolerate_missing_hugetlb_controller = true
+    disable_hugetlb_controller = true
+    ignore_image_defined_volumes = false
     [plugins."io.containerd.grpc.v1.cri".containerd]
       snapshotter = "overlayfs"
-      no_pivot = false
       default_runtime_name = "runc"
+      no_pivot = false
+      disable_snapshot_annotations = true
+      discard_unpacked_layers = false
       [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
         runtime_type = "io.containerd.runc.v2"
         pod_annotations = []
+        container_annotations = []
+        runtime_engine = ""
+        runtime_root = ""
         privileged_without_host_devices = false
+        base_runtime_spec = ""
         [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc.options]
-          NoPivotRoot = false
-          NoNewKeyring = false
-          ShimCgroup = ""
-          IoUid = 0
-          IoGid = 0
-          BinaryName = "{{ k8s_node__runc_bin_dir }}/runc"
-          Root = ""
-          CriuPath = ""
+          no_pivot_root = false
+          no_new_keyring = false
+          shim_cgroup = ""
+          io_uid = 0
+          io_gid = 0
+          binary_name = "{{ k8s_node__runc_bin_dir }}/runc"
+          root = ""
+          criu_path = ""
+          criu_image_path = ""
+          criu_work_path = ""
 {% if k8s_node__kubelet_cgroup_driver == 'cgroupfs' %}
-          SystemdCgroup = false
+          systemd_cgroup = false
 {% else %}
-          SystemdCgroup = true
+          systemd_cgroup = true
 {% endif %}
     [plugins."io.containerd.grpc.v1.cri".cni]
       bin_dir = "{{ k8s_node__kubelet_cni_bin_dir }}"
@@ -98,20 +118,6 @@ oom_score = -999
     [plugins."io.containerd.grpc.v1.cri".x509_key_pair_streaming]
       tls_cert_file = ""
       tls_key_file = ""
-  [plugins."io.containerd.runtime.v2.task"]
-    platforms = ["linux/amd64"]
-  [plugins."io.containerd.service.v1.diff-service"]
-    default = ["walking"]
-  [plugins."io.containerd.snapshotter.v1.devmapper"]
-    root_path = ""
-    pool_name = ""
-    base_image_size = ""
-  [plugins."io.containerd.runtime.v1.linux"]
-    shim = "{{ k8s_node__containerd_bin_dir }}/containerd-shim-runc-v2"
-    runtime = "{{ k8s_node__runc_bin_dir }}/runc"
-    runtime_root = ""
-    no_shim = false
-    shim_debug = false
   [plugins."io.containerd.internal.v1.opt"]
     path = "{{ k8s_node__containerd_opt_dir }}"
   [plugins."io.containerd.internal.v1.restart"]
@@ -120,9 +126,18 @@ oom_score = -999
     content_sharing_policy = "shared"
   [plugins."io.containerd.monitor.v1.cgroups"]
     no_prometheus = false
-  [plugins."io.containerd.gc.v1.scheduler"]
-    pause_threshold = 0.02
-    deletion_threshold = 0
-    mutation_threshold = 100
-    schedule_delay = "0s"
-    startup_delay = "100ms"
+  [plugins."io.containerd.runtime.v1.linux"]
+    shim = "{{ k8s_node__containerd_bin_dir }}/containerd-shim-runc-v2"
+    runtime = "{{ k8s_node__runc_bin_dir }}/runc"
+    runtime_root = ""
+    no_shim = false
+    shim_debug = false
+  [plugins."io.containerd.runtime.v2.task"]
+    platforms = ["linux/amd64"]
+  [plugins."io.containerd.service.v1.diff-service"]
+    default = ["walking"]
+  [plugins."io.containerd.snapshotter.v1.devmapper"]
+    root_path = ""
+    pool_name = ""
+    base_image_size = ""
+    async_remove = false
