--- a/roles/k8s_node/templates/systemd_units/containerd.service.j2
+++ b/roles/k8s_node/templates/systemd_units/containerd.service.j2
@@ -1,21 +1,25 @@
 [Unit]
 Description=containerd container runtime
 Documentation=https://containerd.io
-After=network.target
+After=network.target local-fs.target
 
 [Service]
 User=root
 Group=root
 Environment=PATH={{ k8s_node__containerd_bin_dir }}:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+ExecStartPre=-/sbin/modprobe overlay
 ExecStart={{ k8s_node__containerd_bin_dir }}/containerd \
   -c {{ k8s_node__containerd_conf }} \
   -l {{ k8s_node__containerd_log_level }}
+
+Type=notify
+Delegate=yes
+KillMode=process
 Restart=always
 RestartSec={{ k8s_node__containerd_restart_sec }}
-KillMode=process
-Delegate=yes
+
 OOMScoreAdjust=-999
-LimitNOFILE=1048576
+LimitNOFILE=infinity
 LimitNPROC=infinity
 LimitCORE=infinity
 TasksMax=infinity
