--- a/roles/k8s_master/templates/systemd_units/kube-apiserver.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-apiserver.service.j2
@@ -24,6 +24,8 @@ ExecStart={{ k8s__k8s_bin_dir }}/kube-apiserver \
   --advertise-address={{ host__public_address }} \
   --allow-privileged=true \
   --anonymous-auth=false \
+  --api-audiences={{ k8s_master__kube_apiserver_api_audiences }} \
+  --audit-log-compress={{ k8s_master__kube_apiserver_audit_log_compress }} \
   --audit-log-format={{ k8s_master__kube_apiserver_audit_log_format }} \
   --audit-log-maxage={{ k8s_master__kube_apiserver_audit_log_maxage }} \
   --audit-log-maxbackup={{ k8s_master__kube_apiserver_audit_log_maxbackup }} \
@@ -49,7 +51,6 @@ ExecStart={{ k8s__k8s_bin_dir }}/kube-apiserver \
 {% if _feature_gates | length > 0 %}
   --feature-gates={{ _feature_gates | join(',') }} \
 {% endif %}
-  --insecure-port=0 \
   --kubelet-certificate-authority={{ k8s_master__pki_dir }}/ca.crt \
   --kubelet-client-certificate={{ k8s_master__pki_dir }}/kube-apiserver-client.crt \
   --kubelet-client-key={{ k8s_master__pki_dir }}/kube-apiserver-client.key \
@@ -64,8 +65,10 @@ ExecStart={{ k8s__k8s_bin_dir }}/kube-apiserver \
   --requestheader-group-headers=X-Remote-Group \
   --requestheader-username-headers=X-Remote-User \
   --secure-port={{ k8s__kube_apiserver_secure_port }} \
+  --service-account-issuer={{ k8s_master__kube_apiserver_service_account_issuer }} \
   --service-account-key-file={{ k8s_master__pki_dir }}/kube-controller-manager-client.pub \
   --service-account-lookup=true \
+  --service-account-signing-key-file={{ k8s_master__pki_dir }}/kube-controller-manager-client.key \
   --service-cluster-ip-range={{ k8s__service_cluster_ip_range }} \
   --service-node-port-range={{ k8s_master__kube_apiserver_service_node_port_range }} \
   --tls-cert-file={{ k8s_master__pki_dir }}/kube-apiserver.crt \
