--- a/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
@@ -38,7 +38,7 @@ ExecStart={{ k8s__k8s_bin_dir }}/kube-controller-manager \
   --root-ca-file={{ k8s_master__pki_dir }}/ca.crt \
   --secondary-node-eviction-rate={{ k8s_master__kube_controller_manager_secondary_node_eviction_rate }} \
   --secure-port={{ k8s_master__kube_controller_manager_secure_port }} \
-  --service-account-private-key-file={{ k8s_master__pki_dir }}/kube-controller-manager-client.key \
+  --service-account-private-key-file={{ k8s_master__pki_dir }}/sa.key \
   --service-cluster-ip-range={{ k8s__service_cluster_ip_range }} \
   --terminated-pod-gc-threshold={{ k8s_master__kube_controller_manager_terminated_pod_gc_threshold }} \
 {% if not k8s_master__kube_controller_manager_use_auto_generated_serving_cert %}
