Add tasks for creating etcd admin client cert to the etcd role.

--- a/roles/etcd/templates/pki/openssl.conf.j2
+++ b/roles/etcd/templates/pki/openssl.conf.j2
@@ -3,6 +3,11 @@ distinguished_name = req_distinguished_name
 
 [req_distinguished_name]
 
+[ v3_req_client ]
+basicConstraints = CA:FALSE
+keyUsage = critical, digitalSignature, keyEncipherment
+extendedKeyUsage = clientAuth
+
 [ v3_req_etcd ]
 basicConstraints = CA:FALSE
 keyUsage = critical, digitalSignature, keyEncipherment
