--- a/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
@@ -14,6 +14,8 @@ User=kubernetes
 Group=kubernetes
 ExecStart={{ k8s__k8s_bin_dir }}/kube-controller-manager \
   --allocate-node-cidrs=true \
+  --authentication-kubeconfig={{ k8s_master__kubeconfig_dir }}/kube-controller-manager.kubeconfig \
+  --authorization-kubeconfig={{ k8s_master__kubeconfig_dir }}/kube-controller-manager.kubeconfig \
   --bind-address={{ k8s_master__kube_controller_manager_bind_address }} \
   --cluster-cidr={{ k8s__cluster_cidr }} \
   --cluster-name={{ k8s__k8s_cluster_name }} \
