--- a/roles/k8s_node/templates/systemd_units/kubelet.service.j2
+++ b/roles/k8s_node/templates/systemd_units/kubelet.service.j2
@@ -20,7 +20,7 @@ ExecStart={{ k8s__k8s_bin_dir }}/kubelet \
   --v={{ k8s_node__kubelet_vlog_level }} \
   --container-runtime=remote \
   --container-runtime-endpoint=unix://{{ k8s_node__containerd_state_dir }}/containerd.sock \
-  --root-dir={{ k8s_node__kubelet_root_dir }}
+  --root-dir={{ k8s__kubelet_root_dir }}
 Restart=always
 RestartSec={{ k8s_node__kubelet_restart_sec }}s
 KillMode=process
