--- a/roles/k8s_master/templates/k8s_configs/kube-scheduler.conf.j2
+++ b/roles/k8s_master/templates/k8s_configs/kube-scheduler.conf.j2
@@ -1,5 +1,5 @@
 kind: KubeSchedulerConfiguration
-apiVersion: kubescheduler.config.k8s.io/v1beta3
+apiVersion: kubescheduler.config.k8s.io/v1
 
 clientConnection:
   kubeconfig: {{ k8s_master__kubeconfig_dir }}/kube-scheduler.kubeconfig
